--- a/app/views/denuns/show_all.html.erb
+++ b/app/views/denuns/show_all.html.erb
@@ -1,2 +1,29 @@
 <h1>Denuns#show_all</h1>
 <p>Find me in app/views/denuns/show_all.html.erb</p>
+
+<%= @denuncias.count %>
+
+<table style="width:100%">
+  <tr>
+    <th>id</th>
+    <th>nombre</th>
+    <th>descripcion</th>
+    <th>creada</th>
+    <th>dislike</th>
+    <th>like</th>
+    <th></th>
+    <th></th>
+  </tr>
+  <% @denuncias.each do |denuncia| %>
+  <tr>
+    <td><%= denuncia.id %></td>
+    <td><%= denuncia.name %></td>
+    <td><%= denuncia.description %></td>
+    <td><%= denuncia.created_at.strftime("%Y-%m-%d") %></td>
+    <td><%= denuncia.dislike %></td>
+    <td><%= denuncia.like %></td>
+    <td><%= button_to "+1", {action: "like" ,id: denuncia.id} %></td>
+    <td><%= button_to "-1", {action: "dislike" ,id: denuncia.id} %></td>
+  </tr>
+  <% end %>
+</table>
