--- a/app/views/denuns/show_all.html.erb
+++ b/app/views/denuns/show_all.html.erb
@@ -3,8 +3,8 @@
 
 <%= link_to 'Volver', root_path%>
 <br>
-
-<table>
+<div class="wrapper">
+<table class="header">
   <tr>
     <th>Nombre</th>
     <th>Descripcion</th>
@@ -42,3 +42,4 @@
           <% end %>
       <% end %>
 </table>
+</div>
