--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,5 @@
-<%= link_to 'crear', denuns_new_path %>
-<%= link_to 'mostrar', denuns_show_all_path%>
+<h1>Prototipo DenunCity</h1>
+
+<%= link_to 'Crear denuncia', denuns_new_path %>
+<br><br>
+<%= link_to 'Mostrar todas las denuncias', denuns_show_all_path%>
